# rhubarb

./: Cargo.toml  README.md
assets/: bundle.js  test.json
data/life/: README.md
derive-graph-elem/: Cargo.toml
derive-graph-elem/src/: field.rs  lib.rs
examples/: life-gdp.rs  scatter.rs
examples/common/: mod.rs
rhubarb-graph/: Cargo.toml
rhubarb-graph/src/: color.rs  graph.rs  layout.rs  lib.rs  scatter.rs  traits.rs
rhubarb-graph/src/common/: axis.rs  legend.rs  mod.rs  primary.rs
rhubarb-graph/tests/: scatter_serialize.rs
rhubarb-graph/tests/data/: sample1.csv
src/: error.rs  event.rs  handler.rs  layout.rs  lib.rs  logger.rs  resource.rs  router.rs  update.rs
src/control/: button.rs  mod.rs  slider.rs
templates/: base.hbs
